--- a/kalman_filter.ipynb
+++ b/kalman_filter.ipynb
@@ -7,26 +7,20 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.linalg import inv, norm\n",
-    "import pandas as pd\n",
-    "# from filterpy.kalman import KalmanFilter\n",
-    "from kalman import KalmanFilter\n",
-    "import os\n",
-    "import filter\n",
     "\n",
-    "import filter \n",
-    "from matplotlib import pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import data_clean as dc \n",
     "from kalman import KalmanFilter\n",
+    "import filter \n",
+    "import data_clean as dc \n",
+    "import cleaner\n",
+    "\n",
     "from matplotlib.ticker import StrMethodFormatter\n",
     "from geopy.distance import geodesic\n",
-    "import cleaner\n",
+    "from scipy.linalg import inv, norm\n",
     "from sklearn.cluster import KMeans, SpectralClustering\n",
-    "from sklearn.metrics import confusion_matrix\n"
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
@@ -120,15 +114,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gps.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ddict = cleaner.clean_dict(cleaner.load_data(parent))"
    ]
   },
@@ -141,8 +126,6 @@
     "verbose=False\n",
     "inPlace=False\n",
     "\n",
-    "from geopy.distance import geodesic\n",
-    "\n",
     "def add_lat_long_meters(df):\n",
     "    # convert the coordinates to meters \n",
     "    x_diffs = [geodesic((df['latitude'].iloc[0], df['longitude'].iloc[i]), (df['latitude'].iloc[i], df['longitude'].iloc[i])).meters for i in range(len(df)-1)]\n",
@@ -154,7 +137,6 @@
     "    df['lat_m'] = x_diffs\n",
     "    df['long_m'] = y_diffs\n",
     "    df.dropna(inplace=True)\n",
-    "    # return x_diffs, y_diffs\n",
     "\n",
     "if not inPlace:\n",
     "    ddict = ddict.copy()\n",
@@ -176,227 +158,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ddict['train']['t_gps']['PVS 1']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# kalman - original \n",
-    "doesn't work"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cleaner\n",
-    "\n",
-    "parent = '.data'\n",
-    "data_dict = cleaner.clean_dict(cleaner.load_data(parent, exclude_test=[\"PVS 7\", \"PVS 8\"], exclude_val=[\"PVS 9\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_z_dash(df, type=\"train\", road=\"good_road_left\"):\n",
-    "    \"\"\"\n",
-    "    Builds a 1 column dataset from the given dictionary of dataframes\n",
-    "    timestamp\n",
-    "    latitude\n",
-    "    longitude\n",
-    "    elevation\n",
-    "    acc_x_dash_smooth\n",
-    "    acc_y_dash_smooth\n",
-    "    acc_z_dash_smooth\n",
-    "\n",
-    "    :param df: dataframe\n",
-    "    :param type: string\n",
-    "\n",
-    "    :return: dataframe with only the acc_z_dash column\n",
-    "    \"\"\"\n",
-    "    result = None\n",
-    "    lengths = []\n",
-    "    for folder in df[type][\"gps_mpu_left\"].keys():\n",
-    "        pvsi = df[type][\"gps_mpu_left\"][folder]\n",
-    "        labels = df[type][\"labels\"][folder][road]\n",
-    "        indices = labels[labels == 1].index\n",
-    "\n",
-    "        new_data = pvsi.loc[indices]\n",
-    "        lengths.append(len(new_data))\n",
-    "\n",
-    "        if result is None:\n",
-    "            result = new_data\n",
-    "        else:\n",
-    "            # append on the same column\n",
-    "            result = pd.concat([result, new_data], axis=0)\n",
-    "\n",
-    "    return result, lengths\n",
-    "    \n",
-    "\n",
-    "\n",
-    "def build_gps_data(df, type=\"train\"):\n",
-    "    \"\"\"\n",
-    "    Builds a 6 column dataset from the given dataframe\n",
-    "\n",
-    "    :param df: dataframe\n",
-    "    :param type: string\n",
-    "\n",
-    "    :return: dataframe with only the acc_z_dash column\n",
-    "    :return: list of lengths\n",
-    "    \"\"\"\n",
-    "    result = {}\n",
-    "    for folder in df[type][\"gps_mpu_left\"].keys():\n",
-    "        # pvsi = df[type][\"gps_mpu_left\"][folder][[\"timestamp\", \"meters_latitude\", \"meters_longitude\", \"acc_x_dash_smooth\", \"acc_y_dash_smooth\", \"acc_z_dash_smooth\"]]\n",
-    "        pvsi = df[type][\"gps_mpu_left\"][folder][[\"timestamp\", \"meters_latitude\", \"meters_longitude\", \"acc_x_dash\", \"acc_y_dash\", \"acc_z_dash\"]]\n",
-    "        elevation = df[type][\"t_gps\"][folder][[\"timestamp\", \"meters_elevation\"]]\n",
-    "\n",
-    "        # merge the two dataframes on timestamp then remove timestamp\n",
-    "        pvsi = pd.merge(pvsi, elevation, on=\"timestamp\")\n",
-    "        pvsi = pvsi.drop(columns=[\"timestamp\"])\n",
-    "\n",
-    "        result[folder] = pvsi\n",
-    "    return result\n",
-    "\n",
-    "\n",
-    "train_dict = {\n",
-    "    \"good\": build_z_dash(data_dict, type=\"train\", road=\"good_road_left\"),\n",
-    "    \"regular\": build_z_dash(data_dict, type=\"train\", road=\"regular_road_left\"),\n",
-    "    \"bad\": build_z_dash(data_dict, type=\"train\", road=\"bad_road_left\")\n",
-    "}\n",
-    "\n",
-    "test_dict = {\n",
-    "    \"good\": build_z_dash(data_dict, type=\"test\", road=\"good_road_left\"),\n",
-    "    \"regular\": build_z_dash(data_dict, type=\"test\", road=\"regular_road_left\"),\n",
-    "    \"bad\": build_z_dash(data_dict, type=\"test\", road=\"bad_road_left\")\n",
-    "}\n",
-    "\n",
-    "filter.add_smoothed_cols(data_dict, window=200)\n",
-    "filter.add_diff_cols(data_dict)\n",
-    "\n",
-    "kal_data = build_gps_data(data_dict, type=\"train\")\n",
-    "print(kal_data)\n",
-    "#print((data_dict[\"train\"][\"t_gps\"][\"PVS 1\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kal_data_test = kal_data.copy()\n",
-    "kal_data_test['PVS 1']['acc_z_dash']  = kal_data_test['PVS 1']['acc_z_dash'] - kal_data_test['PVS 1']['acc_z_dash'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kal_data['PVS 3']\n",
-    "\n",
-    "\n",
-    "Q = np.eye(9) * 0.1\n",
-    "R = np.eye(6) * 1000\n",
-    "dt = .1\n",
-    "F = np.array(  [[1,0,0,dt,0,0,0,0,0],\n",
-    "                [0,1,0,0,dt,0,0,0,0],\n",
-    "                [0,0,1,0,0,dt,0,0,0],\n",
-    "                [0,0,0,1,0,0,dt,0,0],\n",
-    "                [0,0,0,0,1,0,0,dt,0],\n",
-    "                [0,0,0,0,0,1,0,0,dt],\n",
-    "                [0,0,0,0,0,0,1,0,0],\n",
-    "                [0,0,0,0,0,0,0,1,0],\n",
-    "                [0,0,0,0,0,0,0,0,1]])\n",
-    "\n",
-    "G = np.ones((9,9))\n",
-    "# initial state\n",
-    "x0 = np.zeros(9)\n",
-    "P0 = 1e5 * Q\n",
-    "#P0 = 1e-1 * Q\n",
-    "# z = kal_data['PVS 1'][['meters_latitude', 'meters_longitude', 'meters_elevation', 'acc_x_dash_smooth','acc_y_dash_smooth', 'acc_z_dash_smooth']].to_numpy().T\n",
-    "z = kal_data_test['PVS 1'][['meters_latitude', 'meters_longitude', 'meters_elevation', 'acc_x_dash','acc_y_dash', 'acc_z_dash']].to_numpy().T\n",
-    "# z = kal_data[\"PVS 1\"].to_numpy().T\n",
-    "# print(kal_data[\"PVS 1\"].columns)\n",
-    "tsteps = 1000\n",
-    "\n",
-    "\n",
-    "H = np.zeros((6, 9))\n",
-    "for i in range(3):\n",
-    "    H[i, i] = 1\n",
-    "    H[i + 3, i + 6] = 0\n",
-    "\n",
-    "print(H)\n",
-    "\n",
-    "# control u\n",
-    "u = np.zeros(9)\n",
-    "# u[-1] = -.98\n",
-    "\n",
-    "kf = KalmanFilter(F, Q, H, R, G, u)\n",
-    "est = kf.estimate(x0, P0, z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# compare plots\n",
-    "fig, ax = plt.subplots(2,3,figsize=(12,8))\n",
-    "\n",
-    "# plot latitude/longitude\n",
-    "ax[0,0].plot(est[0], est[1])\n",
-    "ax[0,0].plot(z[0], z[1])\n",
-    "ax[0,0].set_title('lat vs long (meters)')\n",
-    "\n",
-    "# plot z position\n",
-    "x = range(est.shape[1])\n",
-    "ax[0,1].plot(x, est[2])\n",
-    "ax[0,1].plot(x, z[2])\n",
-    "ax[0,1].set_title('z meters')\n",
-    "\n",
-    "# plot acceleration\n",
-    "ax[0,2].plot(x, est[6], label='predicted')\n",
-    "ax[0,2].plot(x, z[3], label='actual', zorder=0)\n",
-    "ax[0,2].set_title('x acceleration')\n",
-    "ax[0,2].legend()\n",
-    "\n",
-    "# plot acceleration\n",
-    "ax[1,0].plot(x, est[7], label='predicted')\n",
-    "ax[1,0].plot(x, z[4], label='actual', zorder=0)\n",
-    "ax[1,0].set_title('y acceleration')\n",
-    "ax[1,0].legend()\n",
-    "\n",
-    "# plot acceleration\n",
-    "ax[1,1].plot(x, est[8], label='predicted')\n",
-    "ax[1,1].plot(x, z[5], label='actual', zorder=0)\n",
-    "ax[1,1].set_title('z acceleration')\n",
-    "ax[1,1].legend()\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# kalman without cleaned data\n",
-    "works! "
+    "# Kalman Filter"
    ]
   },
   {
@@ -814,7 +579,6 @@
    "outputs": [],
    "source": [
     "# convert the coordinates to meters \n",
-    "from geopy.distance import geodesic\n",
     "reference_point = (df['latitude'].iloc[0], df['longitude'].iloc[0])\n",
     "x_diffs = [geodesic((df['latitude'].iloc[0], df['longitude'].iloc[i]), (df['latitude'].iloc[i], df['longitude'].iloc[i])).meters for i in range(len(df)-1)]\n",
     "x_diffs.append(None)\n",
@@ -1073,7 +837,6 @@
     "# initial state\n",
     "x0 = np.zeros(9)\n",
     "P0 = 1e5 * Q\n",
-    "# z = df[['lat_m', 'long_m', 'elevation', 'acc_x', 'acc_y', 'acc_z']].to_numpy().T\n",
     "tsteps = 1000\n",
     "\n",
     "\n",
@@ -1086,7 +849,6 @@
     "\n",
     "# control u\n",
     "u = np.zeros(9)\n",
-    "# u[-1] = -.98\n",
     "\n",
     "kf = KalmanFilter(F, Q, H, R, G, u)\n",
     "z_original = df[['lat_m', 'long_m', 'elevation', 'acc_x', 'acc_y', 'acc_z']].to_numpy().T\n",
@@ -1130,6 +892,7 @@
    "source": [
     "est = est_cleaned\n",
     "z = z_cleaned\n",
+    "\n",
     "# compare plots\n",
     "fig, ax = plt.subplots(2,3,figsize=(12,8))\n",
     "\n",
@@ -1148,7 +911,6 @@
     "ax[0,0].legend()\n",
     "ax[0,0].set_xlabel('x position $m$')\n",
     "ax[0,0].set_ylabel('y position $m$')\n",
-    "# ax[0,0].set_ylim(-55,-50)\n",
     "\n",
     "# plot z position\n",
     "ax[0,1].plot(x[10:], est[2,10:], label='predicted')\n",
@@ -1173,7 +935,6 @@
     "ax[1,0].set_ylabel('$m/s^2$')\n",
     "ax[1,0].set_xlabel('Time Steps')\n",
     "ax[1,0].legend()\n",
-    "# ax[1,0].set_xlim(50000, 50100)\n",
     "\n",
     "# plot acceleration\n",
     "ax[1,1].plot(x, est[8], label='predicted')\n",
@@ -1182,11 +943,9 @@
     "ax[1,1].set_ylabel('$m/s^2$')\n",
     "ax[1,1].set_xlabel('Time Steps')\n",
     "ax[1,1].legend()\n",
-    "# ax[1,1].set_xlim(50000, 50100)\n",
     "\n",
     "plt.tight_layout()\n",
-    "# plt.show()\n",
-    "plt.savefig('figures/kalman.png', dpi=300)\n"
+    "plt.savefig('figures/kalman.png', dpi=300)"
    ]
   },
   {
@@ -1246,29 +1005,6 @@
     "ax[0,0].legend()\n",
     "ax[0,0].set_xlabel('x position $m$')\n",
     "ax[0,0].set_ylabel('y position $m$')\n",
-    "# ax[0,0].set_xlim(xlim[0], xlim[1])\n",
-    "# ax[0,0].set_ylim(1200,1250)\n",
-    "\n",
-    "# # plot x position\n",
-    "# ax[0,0].plot(x, est[0], label='predicted',)\n",
-    "# ax[0,0].scatter(x, z[0], label='actual', s=1, color='orange', zorder=0)\n",
-    "# ax[0,0].set_title('x Position')\n",
-    "# ax[0,0].set_ylabel('$m$')\n",
-    "# ax[0,0].set_xlabel('Time Steps')\n",
-    "# ax[0,0].legend()\n",
-    "# ax[0,0].set_xlim(xlim[0], xlim[1])\n",
-    "# ax[0,0].set_ylim(1600,1900)\n",
-    "\n",
-    "\n",
-    "# # plot y position\n",
-    "# ax[0,1].plot(x, est[1], label='predicted',)\n",
-    "# ax[0,1].scatter(x, z[1], label='actual', s=1, color='orange', zorder=0)\n",
-    "# ax[0,1].set_title('y Position')\n",
-    "# ax[0,1].set_ylabel('$m$')\n",
-    "# ax[0,1].set_xlabel('Time Steps')\n",
-    "# ax[0,1].legend()\n",
-    "# ax[0,1].set_xlim(xlim[0], xlim[1])\n",
-    "# ax[0,1].set_ylim(1000,1200)\n",
     "\n",
     "\n",
     "# plot z position\n",
@@ -1298,7 +1034,6 @@
     "ax[1,1].set_xlabel('Time Steps')\n",
     "ax[1,1].set_xlim(xlim[0], xlim[1])\n",
     "ax[1,1].legend()\n",
-    "# ax[1,0].set_xlim(50000, 50100)\n",
     "\n",
     "# plot acceleration\n",
     "ax[1,2].plot(x, est[8], label='predicted')\n",
@@ -1308,11 +1043,9 @@
     "ax[1,2].set_xlabel('Time Steps')\n",
     "ax[1,2].set_xlim(xlim[0], xlim[1])\n",
     "ax[1,2].legend()\n",
-    "# ax[1,1].set_xlim(50000, 50100)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('figures/kalman_zoomed.png', dpi=300)\n",
-    "# plt.show()\n"
+    "plt.savefig('figures/kalman_zoomed.png', dpi=300)\n"
    ]
   },
   {
@@ -1363,7 +1096,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# spectral clustering "
+    "# Spectral Clustering "
    ]
   },
   {
@@ -1372,7 +1105,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# load data\n",
     "parent = '.data/'\n",
     "data = cleaner.load_data(parent, exclude_test=[\"PVS 7\", \"PVS 8\"], exclude_val=[\"PVS 9\"])"
@@ -1595,15 +1327,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trying out clustering on cleaned data"
+    "### Testing clustering on cleaned data"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1755,7 +1480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "testing 3 different clusters"
+    "### Testing 3 different clusters"
    ]
   },
   {
@@ -1818,25 +1543,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cobblestone_road + cluster_labels_0\n",
-    "asphalt_road + cluster_labels_1 \n",
-    "dirt_road + cluster_labels_2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "ll['asphalt_road']\n",
-    "\n",
     "ll['combined_true'] = 0\n",
-    "ll['combined_true'] = ll['combined_true'] + ll['asphalt_road'] + 2*ll['dirt_road']\n"
+    "ll['combined_true'] = ll['combined_true'] + ll['asphalt_road'] + 2*ll['dirt_road']"
    ]
   },
   {
@@ -1915,6 +1628,7 @@
     "y = labels[::10]\n",
     "kmeans = KMeans(n_clusters=3)\n",
     "y_hat = kmeans.fit(X).predict(X)\n",
+    "\n",
     "# extract y actual\n",
     "y['cluster_labels'] = y_hat\n",
     "ll = pd.get_dummies(y,columns=['cluster_labels'])\n",
@@ -2014,7 +1728,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "testing cleaned data to predict paved vs unpaved roads"
+    "### Testing cleaned data to predict paved vs unpaved roads"
    ]
   },
   {
@@ -2098,26 +1812,6 @@
     "# get confusion matrix\n",
     "print((y_hat == ll['unpaved_road']).sum()/len(ll[c]))\n",
     "confusion_matrix(ll['unpaved_road'], y_hat)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2587"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ll['unpaved_road'].sum()"
    ]
   },
   {
@@ -2209,9 +1903,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "def plot_confusion_matrix(conf_matrix, classes, ax, title):\n",
     "    \"\"\"\n",
     "    Plot Confusion Matrix.\n",
@@ -2314,16 +2005,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing clustering(agian)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import RandomForestClassifier"
+    "# Testing clustering Again"
    ]
   },
   {
@@ -2378,26 +2060,6 @@
    "source": [
     "spectral_clustering = SpectralClustering(n_clusters=2, affinity='nearest_neighbors', random_state=42)\n",
     "y_hat = spectral_clustering.fit_predict(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 1, ..., 1, 0, 0], dtype=int32)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_hat"
    ]
   },
   {
@@ -2485,7 +2147,6 @@
     "paved_roads = labels[labels['paved_road'] == 1]\n",
     "unpaved_roads = labels[labels['paved_road'] == 0]\n",
     "\n",
-    "# num_samples = min(len(paved_roads), len(unpaved_roads))\n",
     "num_samples = 1000\n",
     "paved_sample = paved_roads.sample(n=num_samples, random_state=42)\n",
     "unpaved_sample = unpaved_roads.sample(n=num_samples, random_state=42)\n",
@@ -2685,7 +2346,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "# random forest\n",
     "rf_classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "rf_classifier.fit(X, y)"
@@ -2881,13 +2541,6 @@
    "source": [
     "confusion_matrix(y_test, y_hat)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
